formatting and readme and final push

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,7 @@
 {
   "name": "budget",
   "short_name": "budget",
-  "icons": [
-    {
+  "icons": [{
       "src": "/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
